components/molecule/progressSteps/src/styles/index.scss
$base-class: '.sui-MoleculeProgressSteps';
$content-class: '#{$base-class}-content';

#{$base-class} {
  &-path {
    align-items: center;
    display: flex;
    max-width: $mw-progress-steps-path;

    &-bar {
      background: $c-progress-steps-bar;
      border-color: $c-progress-steps-bar;
      border-radius: 10px;
      border-style: solid;
      border-width: $bdw-progress-steps-bar;
      height: $h-progress-steps-bar;
      margin: 0;
      flex-shrink: 1;

      &--visited {
        background: $c-progress-steps-visited;
        border-color: $c-progress-steps-visited;
      }
    }
    @each $justifyContent in $justify-content-path {
      &--justifyContent-#{$justifyContent} {
        @if $justifyContent != 'legacy' {
          justify-content: $justifyContent;
        }
        #{$base-class}-path-bar {
          flex-basis: $sz-progress-steps-bar;
          flex-shrink: 0;
          @if contains((legacy), $justifyContent) {
            flex-grow: 1;
          } @else {
            flex-grow: 0;
          }
        }
      }
    }

    &-step {
      align-items: center;
      color: $c-progress-steps-label;
      display: flex;
      flex-direction: column;
      position: relative;
      flex-basis: $sz-progress-steps-icon;
      flex-shrink: 0;

      svg,
      use {
        fill: $c-progress-steps-icon;
      }

      &--active,
      &--visited {
        color: $c-progress-steps-visited;

        svg,
        use {
          fill: $c-progress-steps-visited;
        }
      }

      &-number,
      &-icon {
        align-items: center;
        display: flex;
        height: $sz-progress-steps-icon;
        margin: $m-progress-steps-icon;
        padding: 0;
        width: $sz-progress-steps-icon;
        flex-basis: $sz-progress-steps-icon;
        svg {
          width: 100%;
        }
      }

      &-number {
        align-items: center;
        display: flex;
        font-size: $fz-xxl;
        justify-content: center;
      }

      &-description {
        color: $c-progress-steps-label;
        hyphens: auto;
        margin-top: 55px;
        overflow-wrap: break-word;
        position: absolute;
        text-align: center;
        width: $w-progress-steps-description;
        word-wrap: break-word;
      }
    }
  }

  &-compressedInfo {
    @each $justifyContent in $justify-content-path {
      &--justifyContent-#{$justifyContent} {
        @if $justifyContent != 'legacy' {
          justify-content: $justifyContent;
        }
      }
    }
  }
  &-compressedInfo,
  #{$content-class} {
    display: flex;
    overflow: hidden;
    &-item {
      margin-right: -100%;
      flex-basis: 100%;
      flex-shrink: 0;
      &--active {
        margin-right: 0;
      }
    }

    &--fixed {
      #{$content-class}-item {
        visibility: hidden;
        &--active {
          visibility: inherit;
        }
      }
    }

    &--fluid {
      #{$content-class}-item {
        display: none;

        &--active {
          display: flex;
        }
      }
    }
  }

  #{$base-class}-compressedInfo {
    &-item {
      visibility: hidden;
      &--active {
        margin-right: 0;
        visibility: inherit;
      }
    }
  }

  &--compressed {
    #{$base-class}-compressedInfo {
      margin: 0;
      display: flex;
      flex-wrap: nowrap;
      @each $justifyContent in $justify-content-path {
        &--justifyContent-#{$justifyContent} {
          @if $justifyContent != 'legacy' {
            justify-content: $justifyContent;
          }
        }
      }
    }

    #{$base-class}-path {
      &-bar {
        flex-basis: $sz-progress-steps-bar-compressed;
        margin: 0 $m-progress-steps-bar;
        &:first-child {
          margin: 0 $m-progress-steps-bar 0 0;
        }
        &:last-child {
          margin: 0 0 0 $m-progress-steps-bar;
        }

        &--active {
          background: $c-progress-steps-active;
          border-color: $c-progress-steps-active;
        }
      }

      &-step {
        &-description {
          font-size: $fz-progress-steps-description;
          left: 0;
          margin: 0;
          text-align: left;
        }
      }
    }
  }

  &--vertical {
    display: flex;
    height: 100%;

    &#{$base-class}--compressed {
      #{$base-class}-compressedInfo {
        display: flex;
        flex-direction: column;
        flex-basis: auto;
        flex-grow: 1;
        flex-shrink: 0;
        justify-content: space-between;
        &-item {
          display: inline-flex;
          flex-basis: inherit;
          justify-content: flex-end;
          align-content: flex-start;
          margin-top: 0;
          margin-right: 0;
          &--active {
            margin-right: 0;
            margin-top: 0;
          }
        }
      }
      #{$base-class}-path {
        margin: 0 $m-progress-steps-bar;
      }
    }

    #{$base-class}-path {
      flex-direction: column;
      margin-right: 100px;

      &-step {
        flex-direction: row;
        position: relative;

        &-description {
          left: 45px;
          margin-top: 0;
          position: absolute;
          text-align: left;
        }
      }

      &-bar {
        margin: $m-progress-steps-bar 0;
        &:first-child {
          margin: 0 0 $m-progress-steps-bar 0;
        }
        &:last-child {
          margin: $m-progress-steps-bar 0 0 0;
        }
        transform: translateY(0);
        width: $h-progress-steps-bar;
        border-width: $bdw-progress-steps-bar;
        min-width: 0;
      }
    }

    #{$base-class}-path-step-icon + #{$base-class}-path-step-description {
      left: 55px;
    }
  }
}

